<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img645"
    tools:context=".MainActivity">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/calculator"
       android:textStyle="bold"
       android:textColor="@color/black"
       android:id="@+id/tv_calculate"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:textSize="40sp"
       android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:background="@color/white"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_Calc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="150dp"
        android:layout_marginStart="10dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_Calc2"
        app:layout_constraintStart_toEndOf="@id/et_Calc"
        android:background="@color/white"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_calc_equal"
        app:layout_constraintStart_toEndOf="@id/et_Calc2"
        android:background="@color/white"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="@id/et_Calc2"
        app:layout_constraintBottom_toBottomOf="@id/et_Calc2"/>
    <TextView
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:id="@+id/tv_Calc_result"
        android:textSize="18sp"
        android:gravity="center"
        android:hint="Результат"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_calc_equal"
        app:layout_constraintTop_toTopOf="@id/tv_calc_equal"
        app:layout_constraintBottom_toBottomOf="@id/tv_calc_equal"/>
<Button
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:id="@+id/btn_Calc_add"
    android:text="+"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="160dp"
    app:layout_constraintTop_toBottomOf="@id/btn_Calc_minus"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"

    />


    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Calc_minus"
        android:text="-"
        android:layout_marginEnd="160dp"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>